Fix carousel link contrast

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -74,7 +74,7 @@ input, select, textarea, button {
   h1, h2 {
     color: $light-blue;
   }
-  a {
+  footer a {
     color: $light-link;
     &:hover {
       color: $link-blue;
